--- a/smblearning-v1-fe/package.json
+++ b/smblearning-v1-fe/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.3.2",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
-    "react-minimal-pie-chart": "^8.2.0",
+    "react-dropzone-uploader": "^2.11.0",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
